remove dataset functionality, convert to mongodb, use dataset API
